--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,14 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fafafa;
+}
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -47,6 +55,11 @@ h4 {
 }
 
 /* ----------------------------------------------- Heading */
+.section-heading {
+    font-weight: 100;
+    font-size: 46px;
+    margin: 25px 0;;
+}
 
 header {
     margin: 0;
@@ -198,8 +211,44 @@ footer {
     color: #e67e22;
 }
 
-.three-reason-heading {
-    margin-bottom: 1px;
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
 
 
+/* ----------------------------------------------- Personal info */
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value{
+    position: relative;
+    width: 60%;
+
+}
