--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100;200;300;400;500;700|Exo:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/* ----------------------------------------------- Colours */
+/*--------------------------------------------Colors*/
+
 .bg-color-name-title {
     background-color: #676767;
 }
 
 .bg-color-three-reasons {
-    background-color: #fafafa;
+    background-color: #fff;
 }
 
 .bg-color-personal-info {
@@ -29,7 +30,7 @@
     background-color: #525252;
 }
 
-/* ----------------------------------------------- Special paddings/margins/text */
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -37,7 +38,6 @@ h3,
 h4 {
     margin: 0;
 }
-
 
 .uppercase {
     text-transform: uppercase;
@@ -47,19 +47,30 @@ h4 {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
-
 }
 
 .inline-block {
     display: inline-block;
 }
 
-/* ----------------------------------------------- Heading */
-.section-heading {
-    font-weight: 100;
-    font-size: 46px;
-    margin: 25px 0;;
+.row-table {
+    display: table;
 }
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -70,10 +81,10 @@ header {
 }
 
 .logo {
-    background-image: url(../images/rosie.jpg);
+    background: url("../images/rosie.jpg");
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
     min-height: 360px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
@@ -105,13 +116,13 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -121,10 +132,10 @@ header {
 }
 
 .menuitem a {
-    height: 120px;
     width: 100%;
     text-decoration: none;
     color: #fff;
+    height: 120px;
 }
 
 .menuitem a i {
@@ -145,14 +156,14 @@ header {
     letter-spacing: 2px;
 }
 
-/* ----------------------------------------------- Hover.css */
+/*--------------------------------------------Hover.css*/
 
-.hvr-sweep-to-bottom::before {
-    background-color: rgba(0, 0, 0, 0.2);
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
 
-
-/* ----------------------------------------------- Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -161,18 +172,18 @@ footer {
     margin: 0;
 }
 
-.cv-pdf i{
+.cv-pdf i {
     font-size: 18px;
     color: #fafafa;
     text-align: center;
     padding-left: 5px;
-    transition: all .35s ease-in-out;
-    -moz-transition: all .35s ease-in-out;
-    -webkit-transition: all .35s ease-in-out;
-    -o-transition: all .35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
 }
 
-.cv-pdf i:hover{
+.cv-pdf i:hover {
     color: #e84610;
 }
 
@@ -190,10 +201,10 @@ footer {
     text-align: center;
     color: #fafafa;
     background: #8f8f8f;
-    transition: all .35s ease-in-out;
-    -moz-transition: all .35s ease-in-out;
-    -webkit-transition: all .35s ease-in-out;
-    -o-transition: all .35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
 }
 
 .social-links li a i:hover {
@@ -204,7 +215,7 @@ footer {
     padding: 20px;
 }
 
-/* ----------------------------------------------- Three reasons */
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -215,8 +226,7 @@ footer {
     margin-bottom: 15px;
 }
 
-
-/* ----------------------------------------------- Personal info */
+/* ----------------------------------------Personal Info */
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -228,7 +238,6 @@ footer {
 .personal-info-item .value {
     padding-right: 8px;
     display: inline-block;
-
 }
 
 .personal-info-item .key p,
@@ -247,8 +256,28 @@ footer {
     font-weight: 700;
 }
 
-.personal-info-item .value{
+.personal-info-item .value {
     position: relative;
     width: 60%;
+}
 
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
 }
